wordpress-forum/wordpress-service-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
