wordpress-forum/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  tls:
  - hosts:
    - www.liuchen.work
    secretName: wordpress-ingress-secret
  rules:
  - host: www.liuchen.work
    http:
      paths:
      - path: /test
        backend:
          serviceName: wordpress-service
          servicePort: 80
